--- a/css/all.css
+++ b/css/all.css
@@ -74,8 +74,8 @@ table {
   text-decoration: none;
 }
 
-body {
-  background-color: #E0D8D4;
+li {
+  list-style: none;
 }
 
 .navbar {
@@ -116,7 +116,12 @@ body {
   height: 10rem;
 }
 
+body {
+  background-color: #E0D8D4;
+}
+
 .indexBanner {
+  margin: 4rem 0;
   z-index: 0;
   height: 30rem;
   background-size: cover;
@@ -151,8 +156,12 @@ body {
   line-height: 2.5rem;
   height: 2.5rem;
   width: 6rem;
-  color: #462A1E;
   border-radius: 0.5rem;
+}
+
+.indexBanner .indexBannerContent .goCommodityPage a {
+  display: block;
+  color: #462A1E;
 }
 
 .aboutBrand {
@@ -164,9 +173,8 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   font-size: 1rem;
-  height: 22rem;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  height: 24rem;
+  padding: 2rem 8rem;
 }
 
 .aboutBrand .brandLogo {
@@ -203,17 +211,13 @@ body {
   text-align: right;
 }
 
-.aboutBrand .brandContentImg img {
-  width: 20rem;
-}
-
 .aboutBrand .brandImg {
-  min-width: 20%;
   text-align: right;
   overflow: hidden;
 }
 
 .aboutBrand .brandImg img {
+  padding: 2rem;
   height: 100%;
 }
 
@@ -221,7 +225,6 @@ body {
   margin-top: 3rem;
   margin: 3rem auto;
   padding-bottom: 3rem;
-  background-color: #E0D8D4;
 }
 
 .commodityTitle h3 {
@@ -269,7 +272,10 @@ body {
   color: #462A1E;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
+  .brandLogo {
+    display: none;
+  }
   .aboutBrand {
     display: block;
     height: auto;
@@ -301,6 +307,10 @@ body {
   width: 3rem;
   height: 2rem;
   color: #ffffff;
+}
+
+body {
+  background-color: #ffffff;
 }
 
 .cartContent {
@@ -637,17 +647,22 @@ body {
 
 .searchSort .sortBtn a {
   padding: 0.5rem;
-  background-color: #333333;
+  border: 1px solid #8A6552;
   color: #462A1E;
 }
 
 .searchSort .sortBtn a:hover {
-  background-color: white;
+  color: #ffffff;
+  background-color: #8A6552;
   border: 1px solid #8A6552;
 }
 
 .commodity li {
   padding: 0;
+}
+
+.commodityTitle {
+  background-color: none;
 }
 
 .commodityContent {
