--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,8 +1,10 @@
-
+body{
+    background-color:$VABackgroundColor;
+}
 
 //首頁banner
 .indexBanner{
-    //margin: 4rem 0;
+    margin: 4rem 0;
     z-index:0;
     height: 30rem;
     // width: 100%;
@@ -32,8 +34,12 @@
             line-height: 2.5rem;
             height: 2.5rem;
             width: 6rem;
-            color:$VADarkOrange ;
+
             border-radius:0.5rem;
+            a{
+                display: block;
+                color:$VADarkOrange ;
+            }
         }
     }
     
@@ -47,10 +53,9 @@
     justify-content:space-between;
     font-size: 1rem;
     //width: auto;
-    height: 22rem;
-    //padding: 0 3rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    height: 24rem;
+    padding: 2rem 8rem;
+
     
     
     .brandLogo{
@@ -76,16 +81,16 @@
 
     .brandContentImg{
         text-align: right;
-        img{
-            width: 20rem;
-        }
+
     }
 
     .brandImg{
-        min-width: 20%;
+        //min-width: 20%;
         text-align: right;
         overflow: hidden;
+        
         img{
+            padding: 2rem;
             height:100%;
 
         }
@@ -97,7 +102,7 @@
     margin-top: 3rem;
     margin: 3rem auto;
     padding-bottom: 3rem;
-    background-color: $VABackgroundColor;
+    //background-color: $VABackgroundColor;
 
     h3 {
         text-align: center;
@@ -144,7 +149,11 @@
 
 }
 
-@media screen and (max-width:768px) { 
+@media (max-width:768px) { 
+
+    .brandLogo{
+        display: none;
+    }
 
     .aboutBrand{
         display: block;
