--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -26,3 +26,13 @@
         height: 10rem;
     }}
 
+
+    // @media screen and (max-width:768px) { 
+
+    //     .vacationAromaLogo{
+    //         img{
+    //             height: 4rem;
+    //         }
+    //     }
+    
+    // }
