--- a/scss/_format.scss
+++ b/scss/_format.scss
@@ -25,9 +25,12 @@ $VAFontSizeS:8px;
     margin: 0 8rem;
 }
 
-// .setInFramePadding{
-//     padding: 8rem;
-// }
+.setInFrameTB{
+    margin-top:3rem;
+    margin-bottom: 3rem;
+}
+
+
 
 .hide{
     display: none;
