--- a/css/all.css
+++ b/css/all.css
@@ -64,6 +64,11 @@ table {
   margin: 0 8rem;
 }
 
+.setInFrameTB {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .hide {
   display: none;
 }
@@ -299,7 +304,29 @@ body {
   line-height: 2rem;
 }
 
-.footer .vaIGBtn {
+.footer .footerIconBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer .social {
+  display: block;
+  background-size: contain;
+  height: 2rem;
+  width: 2rem;
+  background-image: url("/img/iconIG.png");
+}
+
+.footer .social .IGBtn {
+  background-image: url("/img/iconFB.png");
+}
+
+.footer .social .FBBtn {
+  background-image: url("/img/iconIG.png");
+}
+
+.footer .social .LineBtn {
   background-image: url("/img/iconIG.png");
 }
 
@@ -376,17 +403,57 @@ body {
 }
 
 .cartList td h3 {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.cartList td .productImg {
+  padding: 0.1rem;
+  overflow: hidden;
 }
 
 .cartList td img {
-  max-width: 8rem;
+  height: 8rem;
   text-align: center;
 }
 
 .cartList .tdNotSolid {
   border: none;
+}
+
+.purchasingNum {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 1px solid #8A6552;
+}
+
+.selectValueAddSub {
+  font-size: 1.5rem;
+  color: #462A1E;
+  margin: auto;
+}
+
+.selectValueAddSub {
+  font-size: 1.5rem;
+  color: #462A1E;
+  margin: auto;
+}
+
+.purchasingValue {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /*改變右邊箭頭樣式*/
+  font-size: 1rem;
+  width: 50%;
+  text-align: center;
+  outline: none;
+  padding: 0rem;
+  border: none;
+  color: #8A6552;
 }
 
 .nextBtn {
@@ -659,6 +726,11 @@ body {
 
 .commodity li {
   padding: 0;
+  overflow: hidden;
+}
+
+.commodity .commodityImg {
+  display: block;
 }
 
 .commodityTitle {
@@ -672,7 +744,6 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 3rem 5rem;
 }
 
 .commodityNav {
@@ -697,16 +768,24 @@ body {
   color: #333333;
 }
 
+.purchasing {
+  margin-left: 5rem;
+}
+
 .purchasingNav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 3rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .purchasingNav .productImg {
-  height: 25rem;
-  width: 25rem;
+  background-position: center;
+  background-size: cover;
+  max-height: 25rem;
+  max-width: 25rem;
   overflow: hidden;
 }
 
@@ -714,22 +793,23 @@ body {
   margin: 1rem 0 5rem 0;
 }
 
-.purchasingNav ul {
-  margin-left: 2rem;
+.purchasingNav .purchasingArea {
+  min-width: 23rem;
 }
 
-.purchasingNav ul h1 {
-  font-size: 3rem;
+.purchasingNav .purchasingArea h1 {
+  font-size: 2rem;
+  line-height: 2.5rem;
 }
 
-.purchasingNav ul .purchasingSubtitle {
+.purchasingNav .purchasingArea .purchasingSubtitle {
   font-size: 1.5rem;
   margin-top: 2rem;
   margin-bottom: 0.5rem;
   color: #462A1E;
 }
 
-.purchasingNav ul .selectGrind {
+.purchasingNav .purchasingArea .selectGrind {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -742,7 +822,7 @@ body {
   color: #8A6552;
 }
 
-.purchasingNav ul .purchasingValue {
+.purchasingNav .purchasingArea .purchasingValue {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -753,9 +833,10 @@ body {
   outline: none;
   padding: 0rem;
   border: none;
+  color: #8A6552;
 }
 
-.purchasingNav ul .selectPurchasingNum {
+.purchasingNav .purchasingArea .selectPurchasingNum {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -765,7 +846,7 @@ body {
   height: 2.5rem;
 }
 
-.purchasingNav ul .selectPurchasingNum .purchasingNum {
+.purchasingNav .purchasingArea .selectPurchasingNum .purchasingNum {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -776,13 +857,13 @@ body {
   border: 1px solid #8A6552;
 }
 
-.purchasingNav ul .selectPurchasingNum .selectValueAddSub {
+.purchasingNav .purchasingArea .selectPurchasingNum .selectValueAddSub {
   font-size: 1.5rem;
   color: #462A1E;
   margin: auto;
 }
 
-.purchasingNav ul .selectPurchasingNum .carBtn {
+.purchasingNav .purchasingArea .selectPurchasingNum .cartBtn {
   font-size: 1.2rem;
   display: -webkit-box;
   display: -ms-flexbox;
