--- a/scss/_searchPage.scss
+++ b/scss/_searchPage.scss
@@ -32,12 +32,18 @@
 
 .commodity{
     li{
-        padding: 0;
+        padding: 0;       
+        overflow: hidden;
+    }
+    .commodityImg{
+        display:block;
+        //text-align: center;
     }
 }
 
 .commodityTitle{
     background-color: none;
 }
+
 
 
