--- a/scss/_sp1CartPage.scss
+++ b/scss/_sp1CartPage.scss
@@ -51,18 +51,25 @@ body{
     td{
         margin:auto 3rem;
         padding: 1em;
-
+        //max-width: 8rem;
         // vertical-align:center;
         border-bottom: 1px solid #e9e9e9;
 
         h3{
-            font-size: 2rem;
-            margin-bottom: 0.5rem;
+            font-size: 1.5rem;
+            //margin-bottom: 0.5rem;
         }
 
+        .productImg{
+            //max-width: 8rem;
+            padding: 0.1rem;
+            overflow:hidden;
+        }
         img{
-            max-width: 8rem;
+            height: 8rem;
+        //    width: 100%; 
             text-align: center;
+            //margin-top: 2rem;
         }
 
     }
@@ -70,8 +77,50 @@ body{
         border:none
     }
 
+}
+
+
+.purchasingNum{
+    display: flex;
+    justify-content: space-between;
+    border:1px solid $VABorder;
+    }
+    
+    .selectValueAddSub{
+    // display: block;
+    font-size: 1.5rem;
+    color: $VADarkOrange;
+    margin: auto;
+
 
 }
+
+
+.selectValueAddSub{
+    // display: block;
+    font-size: 1.5rem;
+    color: $VADarkOrange;
+    margin: auto;
+
+
+}
+
+
+.purchasingValue{
+appearance:none;
+/*改變右邊箭頭樣式*/
+//background: none;
+font-size: 1rem;
+width:50%;
+text-align: center;
+outline: none;
+padding: 0rem;
+border: none;
+color: $VABorder ;
+
+
+}
+
 
 .nextBtn{
     text-align: center;
