購物流程寫完

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,6 +6,7 @@
     padding: 5rem 2rem 0 2rem;
     display: flex;
     justify-content: space-between;
+    min-width: 60rem;
     
     li{
         line-height: 2rem;
