--- a/scss/_sp2PayPage.scss
+++ b/scss/_sp2PayPage.scss
@@ -18,21 +18,38 @@
         border-radius:1rem;
         
     }
-    :hover .storePayBtn{
+    .storePayBtnOn{
         background-color: $VABorder;
         border: none;
-        color: $VABorder;
+        color: #ffffff;
     }
+
+    .storePayBtn:hover{
+        background-color: $VABorder;
+        border: none;
+        color: #ffffff;
+    }
+
     
     .linePayBtn{
         padding: 2rem;
         margin: 2rem 10rem*2;
-
         color: $LineColor;
-        // background-color: $LineColor;
+
         border: 1px solid $LineColor;
         border-radius:1rem;
     }
+    .linePayBtnOn{
+        background-color: $LineColor;
+        border: none;
+        color: #ffffff;
+    }
+    .linePayBtn:hover{
+        background-color: $LineColor;
+        border: none;
+        color: #ffffff;
+    }
+
 
 
 }
