--- a/css/all.css
+++ b/css/all.css
@@ -96,6 +96,7 @@ li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-width: 60rem;
 }
 
 .navbar ul {
@@ -298,6 +299,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-width: 60rem;
 }
 
 .footer li {
@@ -334,208 +336,6 @@ body {
   width: 3rem;
   height: 2rem;
   color: #ffffff;
-}
-
-body {
-  background-color: #ffffff;
-}
-
-.cartContent {
-  margin: 5rem 10rem;
-}
-
-.cartBar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 4rem auto;
-  min-width: 9rem;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.cartBar li {
-  min-width: 8rem;
-  font-size: 1.2rem;
-  color: #462A1E;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.cartBar li .nextIcon {
-  margin: 0 3rem;
-}
-
-.cartBar .cancel {
-  opacity: 0.3;
-}
-
-.cartList {
-  width: 100%;
-}
-
-.cartList .cartListName {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.cartList .asd {
-  vertical-align: middle;
-}
-
-.cartList th {
-  background-color: #8A6552;
-  margin-bottom: 2rem;
-  padding: 1rem;
-  color: #ffffff;
-}
-
-.cartList td {
-  margin: auto 3rem;
-  padding: 1em;
-  border-bottom: 1px solid #e9e9e9;
-}
-
-.cartList td h3 {
-  font-size: 1.5rem;
-}
-
-.cartList td .productImg {
-  padding: 0.1rem;
-  overflow: hidden;
-}
-
-.cartList td img {
-  height: 8rem;
-  text-align: center;
-}
-
-.cartList .tdNotSolid {
-  border: none;
-}
-
-.purchasingNum {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: 1px solid #8A6552;
-}
-
-.selectValueAddSub {
-  font-size: 1.5rem;
-  color: #462A1E;
-  margin: auto;
-}
-
-.selectValueAddSub {
-  font-size: 1.5rem;
-  color: #462A1E;
-  margin: auto;
-}
-
-.purchasingValue {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  /*改變右邊箭頭樣式*/
-  font-size: 1rem;
-  width: 50%;
-  text-align: center;
-  outline: none;
-  padding: 0rem;
-  border: none;
-  color: #8A6552;
-}
-
-.nextBtn {
-  text-align: center;
-  margin: 1rem 0;
-  padding: 1rem;
-  font-size: 1.2rem;
-  width: 8rem;
-  background-color: #8A6552;
-  color: #ffffff;
-}
-
-.cartContent {
-  min-width: 60rem;
-}
-
-.payment {
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: 5rem;
-}
-
-.payment .storePayBtn {
-  padding: 2rem;
-  margin: 2rem 20rem;
-  color: #8A6552;
-  border: 1px solid #8A6552;
-  border-radius: 1rem;
-}
-
-.payment :hover .storePayBtn {
-  background-color: #8A6552;
-  border: none;
-  color: #8A6552;
-}
-
-.payment .linePayBtn {
-  padding: 2rem;
-  margin: 2rem 20rem;
-  color: #08DF5D;
-  border: 1px solid #08DF5D;
-  border-radius: 1rem;
-}
-
-.deliveryTitle {
-  margin: 2rem auto;
-  text-align: center;
-}
-
-.deliveryContent {
-  margin: 2rem auto;
-  width: 40rem;
-}
-
-.deliveryContent li {
-  font-size: 1.2rem;
-  padding: 1rem;
-  color: #333333;
-}
-
-.deliveryContent input {
-  border: none;
-  font-size: 1rem;
-}
-
-.deliveryContent {
-  margin: 2rem auto;
-  width: 35rem;
-}
-
-.stepBtn {
-  margin-top: 3rem;
-  color: #333333;
-}
-
-.stepBtn .nextBtn {
-  margin: 0;
-}
-
-.stepBtn .previousBtn:hover {
-  background-color: #08DF5D;
-  color: white;
 }
 
 body {
@@ -895,5 +695,234 @@ body {
 
 .purchasingText p {
   line-height: 2rem;
+}
+
+body {
+  background-color: #ffffff;
+}
+
+.cartContent {
+  margin: 5rem auto;
+  max-width: 60rem;
+}
+
+.cartBar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 4rem auto;
+  min-width: 9rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cartBar li {
+  min-width: 8rem;
+  font-size: 1.2rem;
+  color: #462A1E;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cartBar li .nextIcon {
+  margin: 0 3rem;
+}
+
+.cartBar .cancel {
+  opacity: 0.3;
+}
+
+.cartList {
+  width: 100%;
+}
+
+.cartList .cartListName {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.cartList .asd {
+  vertical-align: middle;
+}
+
+.cartList th {
+  background-color: #8A6552;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  color: #ffffff;
+}
+
+.cartList td {
+  margin: auto 3rem;
+  padding: 1em;
+  border-bottom: 1px solid #e9e9e9;
+}
+
+.cartList td h3 {
+  font-size: 1.5rem;
+}
+
+.cartList td .productImg {
+  padding: 0.1rem;
+  overflow: hidden;
+}
+
+.cartList td img {
+  height: 8rem;
+  text-align: center;
+}
+
+.cartList .tdNotSolid {
+  border: none;
+}
+
+.grinding {
+  line-height: 1.5rem;
+}
+
+.purchasingNum {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 1px solid #8A6552;
+}
+
+.selectValueAddSub {
+  font-size: 1.5rem;
+  color: #462A1E;
+  margin: auto;
+}
+
+.selectValueAddSub {
+  font-size: 1.5rem;
+  color: #462A1E;
+  margin: auto;
+}
+
+.purchasingValue {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /*改變右邊箭頭樣式*/
+  font-size: 1rem;
+  width: 50%;
+  text-align: center;
+  outline: none;
+  padding: 0rem;
+  border: none;
+  color: #8A6552;
+}
+
+.nextBtn {
+  text-align: center;
+  margin: 1rem 0;
+  padding: 1rem;
+  font-size: 1.2rem;
+  width: 8rem;
+  background-color: #8A6552;
+  color: #ffffff;
+}
+
+.cartContent {
+  min-width: 60rem;
+}
+
+.payment {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 5rem;
+}
+
+.payment .storePayBtn {
+  padding: 2rem;
+  margin: 2rem 20rem;
+  color: #8A6552;
+  border: 1px solid #8A6552;
+  border-radius: 1rem;
+}
+
+.payment .storePayBtnOn {
+  background-color: #8A6552;
+  border: none;
+  color: #ffffff;
+}
+
+.payment .storePayBtn:hover {
+  background-color: #8A6552;
+  border: none;
+  color: #ffffff;
+}
+
+.payment .linePayBtn {
+  padding: 2rem;
+  margin: 2rem 20rem;
+  color: #08DF5D;
+  border: 1px solid #08DF5D;
+  border-radius: 1rem;
+}
+
+.payment .linePayBtnOn {
+  background-color: #08DF5D;
+  border: none;
+  color: #ffffff;
+}
+
+.payment .linePayBtn:hover {
+  background-color: #08DF5D;
+  border: none;
+  color: #ffffff;
+}
+
+.deliveryTitle {
+  margin: 2rem auto;
+  text-align: center;
+}
+
+.deliveryContent {
+  margin: 2rem auto;
+  width: 40rem;
+}
+
+.deliveryContent li {
+  font-size: 1.2rem;
+  padding: 1rem;
+  color: #333333;
+}
+
+.deliveryContent input {
+  border: none;
+  font-size: 1rem;
+}
+
+.deliveryContent {
+  margin: 2rem auto;
+  width: 35rem;
+}
+
+.stepBtn {
+  margin-top: 3rem;
+  color: #333333;
+}
+
+.stepBtn .nextBtn {
+  margin: 0;
+}
+
+.stepBtn .previousBtn:hover {
+  background-color: #08DF5D;
+  color: white;
+}
+
+.nextBtn {
+  width: 18rem;
 }
 /*# sourceMappingURL=all.css.map */
