--- a/css/indexAll.css
+++ b/css/indexAll.css
@@ -96,6 +96,7 @@ li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-width: 60rem;
 }
 
 .navbar ul {
@@ -132,6 +133,7 @@ li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-width: 60rem;
 }
 
 .footer li {
