--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -7,7 +7,7 @@
         font-size: 1rem;
         display: flex;
         justify-content: space-between;
-
+        min-width: 60rem;
     }
 
     ul{
