--- a/scss/_sp1CartPage.scss
+++ b/scss/_sp1CartPage.scss
@@ -3,7 +3,9 @@ body{
 }
 
 .cartContent{
-    margin: 5rem 10rem;
+    //text-align: center;
+    margin: 5rem auto;
+    max-width: 60rem;
 }
 
 .cartBar{
@@ -60,6 +62,7 @@ body{
             //margin-bottom: 0.5rem;
         }
 
+
         .productImg{
             //max-width: 8rem;
             padding: 0.1rem;
@@ -78,7 +81,9 @@ body{
     }
 
 }
-
+.grinding{
+    line-height: 1.5rem;
+}
 
 .purchasingNum{
     display: flex;
