--- a/scss/all.scss
+++ b/scss/all.scss
@@ -15,6 +15,8 @@
 @import "sp1CartPage";      //購物車
 @import "sp2PayPage";       //付款選擇
 @import "sp3deliveryPage";  //收件人資料
-@import "sp4deliveryCheckPage";  //確認收件資料
+@import "sp4deliveryCheckPage";  //核對收件資料
+@import "sp5Cart";  //確認收件資料
+
 
 
