--- a/css/all.css
+++ b/css/all.css
@@ -470,6 +470,15 @@ body {
   color: #ffffff;
 }
 
+.cartContentList {
+  border-bottom: 1px solid #e9e9e9;
+}
+
+.cartContentList th {
+  margin: 1rem 3rem;
+  padding: 1em;
+}
+
 .registerSuccess {
   text-align: center;
   margin: 8rem;
@@ -535,6 +544,12 @@ body {
 
 .commodityTitle {
   background-color: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .commodityContent {
@@ -935,5 +950,9 @@ body {
 
 .nextBtn {
   width: 18rem;
+}
+
+h3 {
+  margin: auto;
 }
 /*# sourceMappingURL=all.css.map */
