--- a/scss/_memberPage.scss
+++ b/scss/_memberPage.scss
@@ -39,3 +39,12 @@
     background-color: $VADarkOrange;
     color:#ffffff;
 }
+
+.cartContentList{
+
+    border-bottom: 1px solid #e9e9e9;
+    th{
+        margin: 1rem 3rem;
+        padding: 1em;
+    }
+}
