--- a/scss/_memberPage.scss
+++ b/scss/_memberPage.scss
@@ -42,9 +42,12 @@
 
 .cartContentList{
 
-    border-bottom: 1px solid #e9e9e9;
     th{
         margin: 1rem 3rem;
+        padding: 1em;
+        border-bottom: 1px solid #e9e9e9;
+    }
+    td{
         padding: 1em;
     }
 }
