--- a/css/indexAll.css
+++ b/css/indexAll.css
@@ -151,19 +151,18 @@ li {
   background-size: contain;
   height: 2rem;
   width: 2rem;
+}
+
+.footer .IGBtn {
   background-image: url("/img/iconIG.png");
 }
 
-.footer .social .IGBtn {
+.footer .FBBtn {
   background-image: url("/img/iconFB.png");
 }
 
-.footer .social .FBBtn {
-  background-image: url("/img/iconIG.png");
-}
-
-.footer .social .LineBtn {
-  background-image: url("/img/iconIG.png");
+.footer .LineBtn {
+  background-image: url("/img/iconLine.png");
 }
 
 .footer .mapKit {
