--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -19,20 +19,16 @@
         background-size: contain;
         height: 2rem;
         width: 2rem;
-        background-image: url("/img/iconIG.png");
-        .IGBtn{
-            background-image: url("/img/iconFB.png");
-        }
-        .FBBtn{
-            background-image: url("/img/iconIG.png");
-        }
-        .LineBtn{
-            background-image: url("/img/iconIG.png");
-        }
-
-        
     }
-    
+    .IGBtn{
+        background-image: url("/img/iconIG.png");
+    }
+    .FBBtn{
+        background-image: url("/img/iconFB.png");
+    }
+    .LineBtn{
+        background-image: url("/img/iconLine.png");
+    }
     
     .mapKit {
         width: 3rem;
