--- a/scss/_loginpage.scss
+++ b/scss/_loginpage.scss
@@ -17,7 +17,10 @@ body{
         border: none;
         color:$VADarkGray;
         opacity:0.5;
-        //width: 80%;
+        line-height: 2rem;
+        font-size: 1rem;
+
+        outline:none;
     }
     .promptBtn {
         
