--- a/scss/_memberPage.scss
+++ b/scss/_memberPage.scss
@@ -11,6 +11,8 @@
         }
 
         .memberInformation{
+            display: flex;
+            flex-direction:column-reverse;
             margin-left: 3rem;
         }
         
