--- a/css/all.css
+++ b/css/all.css
@@ -83,6 +83,15 @@ li {
   list-style: none;
 }
 
+input {
+  border: none;
+  color: #333333;
+  opacity: 0.5;
+  line-height: 2rem;
+  font-size: 1rem;
+  outline: none;
+}
+
 .navbar {
   background-color: #D9BCB8;
   height: 10rem;
@@ -445,6 +454,13 @@ body {
 }
 
 .memberContent .memberNav .memberInformation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   margin-left: 3rem;
 }
 
