--- a/css/indexAll.css
+++ b/css/indexAll.css
@@ -83,6 +83,15 @@ li {
   list-style: none;
 }
 
+input {
+  border: none;
+  color: #333333;
+  opacity: 0.5;
+  line-height: 2rem;
+  font-size: 1rem;
+  outline: none;
+}
+
 .navbar {
   background-color: #D9BCB8;
   height: 10rem;
