--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -21,13 +21,13 @@
         width: 2rem;
     }
     .IGBtn{
-        background-image: url("/img/iconIG.png");
+        background-image: url("./img/iconIG.png");
     }
     .FBBtn{
-        background-image: url("/img/iconFB.png");
+        background-image: url("./img/iconFB.png");
     }
     .LineBtn{
-        background-image: url("/img/iconLine.png");
+        background-image: url("./img/iconLine.png");
     }
     
     .mapKit {
