--- a/scss/_sp3deliveryPage.scss
+++ b/scss/_sp3deliveryPage.scss
@@ -16,3 +16,9 @@
         font-size: 1rem;
     }
 }
+
+.nextBtnRight{
+    display: block;
+    justify-content:flex-end;
+    //flex-direction: row-reverse;
+}
