--- a/css/indexAll.css
+++ b/css/indexAll.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -163,15 +162,15 @@ input {
 }
 
 .footer .IGBtn {
-  background-image: url("/img/iconIG.png");
+  background-image: url("../img/iconIG.png");
 }
 
 .footer .FBBtn {
-  background-image: url("/img/iconFB.png");
+  background-image: url("../img/iconFB.png");
 }
 
 .footer .LineBtn {
-  background-image: url("/img/iconLine.png");
+  background-image: url("../img/iconLine.png");
 }
 
 .footer .mapKit {
@@ -189,7 +188,7 @@ body {
   z-index: 0;
   height: 30rem;
   background-size: cover;
-  background-image: url("/img/素材/coffee-2540277_1280.jpg");
+  background-image: url("../img/index-pexels-juan-pablo-serrano-arenas-894695.jpeg");
 }
 
 .indexBanner .indexBannerContent {
