--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -9,7 +9,7 @@ body{
     height: 30rem;
     // width: 100%;
     background-size: cover;
-    background-image:url("/img/素材/coffee-2540277_1280.jpg");
+    background-image:url("../img/index-pexels-juan-pablo-serrano-arenas-894695.jpeg");
 
     // overflow: hidden;
     .indexBannerContent{
