--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,10 +29,10 @@
     .LineBtn{
         background-image: url("../img/iconLine.png");
     }
-    
-    .mapKit {
-        width: 3rem;
-        height: 2rem;
-        color: #ffffff;
-    }
 }
+    
+// .mapKit{
+//     width: 3rem;
+//     height: 2rem;
+//     background-color: #ffffff;
+// }
