V8 刪除首頁註解

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -31,8 +31,8 @@
     }
 }
     
-// .mapKit{
-//     width: 3rem;
-//     height: 2rem;
-//     background-color: #ffffff;
-// }
+.mapKit{
+    width: 32rem;
+    height: 12rem;
+    background-color: #ffffff;
+}
