--- a/css/all.css
+++ b/css/all.css
@@ -188,8 +188,9 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   font-size: 1rem;
+  min-width: 63rem;
   height: 24rem;
-  padding: 2rem 8rem;
+  padding: 4rem 8rem;
 }
 
 .aboutBrand .brandLogo {
@@ -294,6 +295,26 @@ body {
   .aboutBrand {
     display: block;
     height: auto;
+    min-width: 0rem;
+  }
+  .brandImg {
+    display: none;
+  }
+  .brandContent {
+    margin: 0rem;
+  }
+  .commodity {
+    text-align: center;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 0rem;
   }
 }
 
@@ -340,10 +361,10 @@ body {
   background-image: url("../img/iconLine.png");
 }
 
-.footer .mapKit {
-  width: 3rem;
-  height: 2rem;
-  color: #ffffff;
+.mapKit {
+  width: 32rem;
+  height: 12rem;
+  background-color: #ffffff;
 }
 
 body {
