--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -52,7 +52,7 @@ body{
     display: flex;
     justify-content:space-between;
     font-size: 1rem;
-    //width: auto;
+    min-width: 63rem;
     height: 24rem;
     padding: 4rem 8rem;
 
@@ -158,6 +158,21 @@ body{
     .aboutBrand{
         display: block;
         height: auto;
+        min-width: 0rem;
+    }
+    .brandImg{
+        display: none;
+    }
+    .brandContent{
+        margin: 0rem;
+    }
+    .commodity{
+        text-align: center;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 0rem;
     }
 
 }
